# APFS-Access-For-Windows

./: .editorconfig  .gitignore  APFSAccess.sln  Build_APFS_Access_Beta.bat  Directory.Build.props  README.md  RELEASE_NOTES.md  Run_APFS_Access.bat  Run_APFS_Pilot_Validation.bat  THIRD_PARTY_NOTICES.md
docs/: api-contracts.md  architecture.md  native-mount-host.md  native-write-pilot.md  native-write-roadmap.md  performance-baselines.md  read-write-optimization-plan.md  winfsp-setup.md
docs/superpowers/plans/: 2026-05-21-apfs-fragility-hardening.md  2026-05-25-apfs-access-gui-dashboard.md  2026-05-25-apfs-performance-optimization.md  2026-05-26-apfs-write-speed-breakthrough.md
scripts/: build_beta_pilot.ps1  build_native_host.ps1  build_paragon_apfsutil.ps1  build_rw_engine.ps1  configure_native_ce.ps1  create_test_image.ps1  create_tray_icons.ps1  evaluate_write_promotion.ps1  import_validation_report.ps1  install_prereqs.ps1  native_probe.ps1  new_validation_report.ps1  run_physical_rw_validation.ps1  run_pilot_validation.ps1  run_rw_harness.ps1  update_write_evidence.ps1
src-native/ApfsAccess.ApfsRwEngine/: CMakeLists.txt
src-native/ApfsAccess.ApfsRwEngine/include/: ApfsObjectMapStore.h  ApfsSpacemanStore.h  ApfsVolumeTreeStore.h  BlockDevice.h  BtreeMutationCodec.h  MetadataStore.h  NativeApfsReader.h  TransactionManager.h
src-native/ApfsAccess.ApfsRwEngine/src/: ApfsObjectMapStore.cpp  ApfsSpacemanStore.cpp  ApfsVolumeTreeStore.cpp  BlockDevice.cpp  BtreeMutationCodec.cpp  MetadataStore.cpp  NativeApfsReader.cpp  TransactionManager.cpp
src-native/ApfsAccess.ApfsRwEngine/tests/: CanonicalStoreTests.cpp  MetadataStoreConformanceFaultTests.cpp  MetadataStoreConformanceTests.cpp  MetadataStoreFaultInjectionTests.cpp  MetadataStorePersistenceTests.cpp  TransactionManagerTests.cpp
src-native/ApfsAccess.FsHost/: CMakeLists.txt
src-native/ApfsAccess.FsHost/src/: main.cpp
src-native/ApfsAccess.FsHost/tests/: FsHostSemanticsTests.cpp
src/ApfsAccess.Backend.Mock/: MockApfsBackend.cs
src/ApfsAccess.Backend.Native/: ApfsAccess.Backend.Native.csproj  NativeApfsBackend.cs  SyntheticApfsTestImage.cs
src/ApfsAccess.Bootstrap/: ApfsAccess.Bootstrap.csproj  Program.cs
src/ApfsAccess.Core/: FirstFreeMountPolicy.cs  IApfsBackend.cs  IMountPolicy.cs  Models.cs  NativeWriteRecoveryReasons.cs  ServiceHostOptions.cs  WriteGatePolicy.cs
src/ApfsAccess.Ipc/: ApfsMessageTypes.cs  ApfsPipeConstants.cs  Messages.cs  NamedPipeMessageClient.cs  NamedPipeMessageServer.cs  PipeMessageCodec.cs  PipePeer.cs
src/ApfsAccess.NativeProbe/: ApfsAccess.NativeProbe.csproj  Program.cs
src/ApfsAccess.Service/: ApfsAccess.Service.csproj  ApfsMountWorker.cs  Program.cs  RuntimeStatusPublisher.cs  TrayPipeHostService.cs  appsettings.Development.json  appsettings.json
src/ApfsAccess.Service/Properties/: launchSettings.json
src/ApfsAccess.Tray/: ApfsAccess.Tray.csproj  DashboardForm.cs  DriveDashboardModels.cs  DriveDashboardPresenter.cs  Program.cs  TrayApplicationContext.cs
tests/ApfsAccess.Backend.Native.Tests/: ApfsAccess.Backend.Native.Tests.csproj  NativeApfsBackendParsingTests.cs  NativeApfsBackendRuntimeStatusTests.cs  SyntheticApfsTestImageTests.cs
tests/ApfsAccess.Core.Tests/: ApfsAccess.Core.Tests.csproj  FirstFreeMountPolicyTests.cs  NativeWriteRecoveryReasonsTests.cs  WriteGatePolicyTests.cs
tests/ApfsAccess.Ipc.Tests/: ApfsAccess.Ipc.Tests.csproj  NamedPipeRoundTripTests.cs  PipeMessageCodecTests.cs
tests/ApfsAccess.Service.Tests/: ApfsAccess.Service.Tests.csproj  ApfsMountWorkerAutoMountTests.cs  ApfsMountWorkerPrioritizationTests.cs  PilotScriptTests.cs  RuntimeStatusPublisherTests.cs
tests/ApfsAccess.Tray.Tests/: ApfsAccess.Tray.Tests.csproj  DashboardFormTests.cs  DriveDashboardPresenterTests.cs  TrayApplicationContextPrioritizationTests.cs  TrayProgramElevationTests.cs
